# Ductline

./: .gitignore  CHANGELOG.md  CLAUDE.md  Ductline-Deck.pptx  PRD.md  README.md  SOLUTION-DESIGN-V2.md  SOLUTION-DESIGN-V3.md  SOLUTION-DESIGN-V4.md  SOLUTION-DESIGN.md  UI-SPEC.md  competitor-research.md  research-report.html
adr/: 0007-pdf-as-canvas.md  (+16 more)
implementation/backend/: .dockerignore  .gitignore  Dockerfile  README.md  extractor.py  main.py  preprocess.py  pyproject.toml  requirements.txt  scale_detector.py
implementation/backend/app/: config.py  main.py  schemas.py
implementation/backend/app/api/: deps.py  routes.py  sessions.py  sse.py  v3_routes.py
implementation/backend/app/cv/: _primitives.py  clip_render.py  connectors.py  crosscut.py  crossings.py  dimensions.py  duct_outline.py  ducts.py  preprocess_v4.py  quality.py  rect_filters.py  rectangles.py  regions.py  terminals.py  types.py
implementation/backend/scripts/: picks_03.yaml  run_v3.py  run_v4.py
implementation/backend/tests/: conftest.py  test_connectors.py  test_crosscut.py  test_crossings.py  test_duct_outline.py  test_flow_trace.py  test_geometry.py  test_ingest_v2.py  test_label_v4.py  test_legend_parse.py  test_network.py  test_orientation.py  test_page_categorize.py  test_preprocess_v4.py  test_pressure.py  test_probe_ocr.py  test_reviewer.py  test_runner_corrections.py  test_runner_two_phase.py  test_runner_v4_debug.py  test_runner_v4_progress.py  test_scale_block.py  test_sessions.py  test_terminals.py  test_tiled_detect.py  test_v3_runner.py  test_v4_e2e.py  test_vlm_guards.py
(+187 files in other folders)
