[project]
name = "hvac-duct-backend"
version = "0.1.0"
description = "HVAC duct detection backend — FastAPI pipeline (SOLUTION-DESIGN.md §3)"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pdf2image==1.17.0",
    "Pillow==10.4.0",
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    # RapidOCR wraps PaddleOCR's models in ONNX runtime — same OCR quality,
    # no paddlepaddle dependency (which lacks reliable arm64 wheels).
    # ADR-0006 escape hatch / SOLUTION-DESIGN §11 open question 2.
    "rapidocr-onnxruntime==1.4.4",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# B008: FastAPI uses `Depends(...)` / `File(...)` in argument defaults by design.
# E501: line length enforced by formatter, not lint.
ignore = ["E501", "B008"]
